VTK-3604 - prevent jumping in h.dir

--- a/src/main/resources/web/themes/default/default.css
+++ b/src/main/resources/web/themes/default/default.css
@@ -3164,6 +3164,10 @@ body#vrtx-preview .tabMessage-big {
 
 /* Embedding */
 
+html.embedded {
+  overflow-y: scroll;
+}
+
 html.embedded,
 html.embedded body {
   background: #999999;
